[package]
name = "tracer"
version = "0.1.0"
authors = ["Tom Birch <froody@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
json = "0.11.14"
winit = "0.20.0-alpha2"
glutin = "0.22.0-alpha1"
gl = "0.10.0"

[profile.release]
debug = true